--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,41 +6,42 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #b37209;
-  --ifm-color-primary-dark: #a16708;
-  --ifm-color-primary-darker: #986108;
-  --ifm-color-primary-darkest: #7d5006;
-  --ifm-color-primary-light: #c57d0a;
-  --ifm-color-primary-lighter: #ce830a;
-  --ifm-color-primary-lightest: #e9940c;
+  --ifm-color-primary: #5b5b5b;
+  --ifm-color-primary-dark: #434343;
+  --ifm-color-primary-darker: #2c2c2c;
+  --ifm-color-primary-darkest: #000000;
+  --ifm-color-primary-light: #727272;
+  --ifm-color-primary-lighter: #8a8a8a;
+  --ifm-color-primary-lightest: #a1a1a1;
   --ifm-background-color: #e5e5e5;
+  --ifm-heading-color: #000000;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   
-  --speeddocs-primary: #000000;
-  --speeddocs-secondary: #a5b4fc;
-  --speeddocs-accent: #FCA311;
-  --speeddocs-text: #FFFFFF;
+  --speeddocs-primary: #f4f5f2;
+  --speeddocs-secondary: #ffffff;
+  --speeddocs-accent: #000000;
   --logo-filter: ;
 
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #fca311;
-  --ifm-color-primary-dark: #fc9e04;
-  --ifm-color-primary-darker: #ef9603;
-  --ifm-color-primary-darkest: #d58503;
-  --ifm-color-primary-light: #fcad2c;
-  --ifm-color-primary-lighter: #fdb239;
-  --ifm-color-primary-lightest: #fdc261;
+  --ifm-color-primary: #dcdcdc;
+  --ifm-color-primary-dark: #d0d0d0;
+  --ifm-color-primary-darker: #b9b9b9;
+  --ifm-color-primary-darkest: #a1a1a1;
+  --ifm-color-primary-light: #e8e8e8;
+  --ifm-color-primary-lighter: #f3f3f3;
+  --ifm-color-primary-lightest: #ffffff;
   --ifm-background-color: #000000;
+  --ifm-heading-color: #ffffff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 
-  --speeddocs-primary: #030c20;
-  --speeddocs-secondary: #14213D;
-  --speeddocs-accent: #FCA311;
-  --logo-filter: invert(1);
+  --speeddocs-primary: #000000;
+  --speeddocs-secondary: #000000;
+  --speeddocs-accent: #ffffff;
+  --logo-filter: ;
 
   --ifm-navbar-background-color: var(--speeddocs-secondary);
   --ifm-background-color: var(--speeddocs-primary) !important;
