--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -78,7 +78,7 @@ main {
   animation-delay: calc(var(--animation-order) * 100ms);
   animation-timing-function: cubic-bezier(0, 0, 0, 1);
   animation-fill-mode: forwards;
-  box-shadow: 0 8px 20px 0px #fca21152;
+  box-shadow: 0 8px 20px 0px var(--speeddocs-accent);
   opacity: 0;
 }
 
